<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Laboration1b</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:"</string>
    <string name="email">Email:</string>
    <string name="summary">------------------</string>
    <string name="changecolor">Change Color</string>
</resources>
